[tool.poetry]
name = "pohms-tf"
version = "0.1.0"
description = "A ceramic-resitor/not-ceramic-resistor cli classifier using tensorflow"
authors = ["Vik Borges <v1k@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
